--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "alextoonz",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^5.1.3",
-    "astro": "^5.0.3",
-    "tailwindcss": "^3.4.16"
-  }
+	"name": "alextoonz",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"start": "astro dev",
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/tailwind": "^5.1.3",
+		"astro": "^5.0.3",
+		"tailwindcss": "^3.4.16"
+	},
+	"devDependencies": {
+		"sass": "^1.82.0"
+	}
 }
