--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/tailwind": "^5.1.3",
 		"astro": "^5.0.3",
+		"gsap": "^3.12.5",
 		"tailwindcss": "^3.4.16"
 	},
 	"devDependencies": {
